fix(scss): case where invisible text on dark button hover/focus
Affects .dark a .btn :hover/focus

For example, with red button and red link color, led to red button with (invisible) red text on button hover/focus.

--- a/wowchemy/assets/scss/wowchemy/_root.scss
+++ b/wowchemy/assets/scss/wowchemy/_root.scss
@@ -134,8 +134,8 @@ a:focus {
   color: $sta-dark-link;
 }
 
-.dark a:hover,
-.dark a:focus {
+.dark a:not(.btn):hover,
+.dark a:not(.btn):focus {
   color: $sta-dark-link-hover;
 }
 
